Close WMF player session on media player destruction

Additionally removing some spooky function creating dangling pointer

Fixes: QTBUG-95626
Change-Id: I887ef7a309dde42c9594d4f94a84d72d86380579
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit e93a3c66bef99e291c6ee5e5fd183900bc89b223)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>