src/multimedia/platform/windows/player/mfplayercontrol.cpp
@@ -58,7 +58,7 @@ MFPlayerControl::MFPlayerControl(QMediaPlayer *player)
 
 MFPlayerControl::~MFPlayerControl()
 {
-    m_session->clearPlayer();
+    m_session->close();
     m_session->Release();
 }
 
